Alignments fixed

--- a/grails-app/assets/stylesheets/pashion/pashion.scss
+++ b/grails-app/assets/stylesheets/pashion/pashion.scss
@@ -326,7 +326,7 @@ ai-dialog-body .grid-block-row {
 .grid-row {
   width: 100%;
   display: flex;
-  margin: 1rem 0;
+  margin: 0.8rem 0;
   height: 28px; 
   min-height: 28px; 
 }
