--- a/grails-app/assets/stylesheets/pashion/pashion_components/_forms.scss
+++ b/grails-app/assets/stylesheets/pashion/pashion_components/_forms.scss
@@ -22,7 +22,7 @@ select {
     font-weight: 500;
     letter-spacing: 1px;
     min-height: 3rem;
-    line-height: 1rem;
+    line-height: 1.2rem;
 }
 
 
